fix: apply CSS styling to achieve basic layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="pages/catgallery.html">
                     <img
                         src="https://images.unsplash.com/photo-1608848461950-0fe51dfc41cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxleHBsb3JlLWZlZWR8Mnx8fGVufDB8fHx8fA%3D%3D&w=1000&q=80"
-                        alt="Headshot of Brown Tabby Cat with Hazel Eyes"
+                        alt="Headshot of own Tabby Cat with Hazel Eyes"
                         height="300"
                         width="200"
                     />
@@ -30,10 +30,10 @@
                 <div id="cat-info">
                     <h2>Cat Lists</h2>
                     <h3>Things cats love:</h3>
-                    <ul>
-                        <li>cat nip</li>
-                        <li>laser pointers</li>
-                        <li>lasagna</li>
+                    
+                        cat nip
+                        laser pointers
+                        lasagna
                     </ul>
                     <figure>
                         <img
@@ -46,14 +46,14 @@
                     </figure>
                     <h3>Top 3 things cats hate:</h3>
                     <ol>
-                        <li>flea treatment.</li>
-                        <li>thunder</li>
-                        <li>other cats</li>
+                        flea treatment.
+                        thunder
+                        other cats
                     </ol>
                     <figure>
                         <img
                             src="https://thumbs.dreamstime.com/b/little-cats-20284533.jpg"
-                            alt="Group of Cats on a Broom laid Flat on The Floor"
+                            alt="Group of Cats on a oom laid Flat on The Floor"
                             height="150"
                             width="250"
                         />
